se soluciona el problema del token y ahora los usuarios con la propiedad USER pueden ver los articulos que tienen en la cesta